LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/EA_Configuration__c.object-meta.xml
<CustomObject>
    <label>EA Configuration</label>
    <nameField>
        <displayFormat>EAC-{0000}</displayFormat>
        <label>EAExistingPermissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EA Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>