LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/fields/EA_Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>EA_Emp_Id__c</fullName>
    <externalId>true</externalId>
    <label>EA Emp Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>