LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/fields/EA_User__c.field-meta.xml
<CustomField>
    <fullName>EA_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EA User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EA_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>