LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/fields/Original_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Original_Permission_Sets__c</fullName>
    <label>Original Permission Sets</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>