LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/fields/Original_Profile__c.field-meta.xml
<CustomField>
    <fullName>Original_Profile__c</fullName>
    <label>Original Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>