LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/fields/Original_Public_Groups__c.field-meta.xml
<CustomField>
    <fullName>Original_Public_Groups__c</fullName>
    <label>Original Public Groups</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>