LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/fields/Original_Queues__c.field-meta.xml
<CustomField>
    <fullName>Original_Queues__c</fullName>
    <label>Original Queues</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>