LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/fields/Original_Role__c.field-meta.xml
<CustomField>
    <fullName>Original_Role__c</fullName>
    <label>Original Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>