LinKreta_POC_Repository/force-app/main/default/objects/EA_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EA_Emp_Id__c</columns>
    <columns>EA_User__c</columns>
    <columns>Original_Permission_Sets__c</columns>
    <columns>Original_Profile__c</columns>
    <columns>Original_Public_Groups__c</columns>
    <columns>Original_Queues__c</columns>
    <columns>Original_Role__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>